Tasklist css-overflow fix-two

--- a/css/taskstyle.css
+++ b/css/taskstyle.css
@@ -154,6 +154,7 @@ li {
 #completedTaskList {
     padding-left: 12px;
     padding-right: 12px;
+    word-break: break-all;
 }
 
 .completedTask {
